--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap-icons": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
   },
