--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap-icons": "^1.4.1",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^3.3.4",
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
