--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap-icons": "^1.4.1",
+    "is-svg": "^4.2.2",
     "react": "^17.0.2",
     "react-accessible-accordion": "^3.3.4",
     "react-dom": "^17.0.2",
